Compose the bird behavior into a class.

--- a/Shared/Flappy.Logic/Flappy.Logic.csproj
+++ b/Shared/Flappy.Logic/Flappy.Logic.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Characters\Bird.cs" />
     <Compile Include="Controls\IControls.cs" />
     <Compile Include="Controls\KeyboardControls.cs" />
     <Compile Include="Controls\TouchControls.cs" />
