--- a/Android/Flappy/Flappy.csproj
+++ b/Android/Flappy/Flappy.csproj
@@ -86,6 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Content\Bird.png" />
+    <AndroidAsset Include="Assets\Content\CapBottom.png" />
+    <AndroidAsset Include="Assets\Content\CapTop.png" />
+    <AndroidAsset Include="Assets\Content\Segment.png" />
     <Content Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
