Add pipes as the camera moves.

--- a/Shared/Flappy.Logic/Flappy.Logic.csproj
+++ b/Shared/Flappy.Logic/Flappy.Logic.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="Characters\Bird.cs" />
     <Compile Include="Characters\Pipe.cs" />
+    <Compile Include="Characters\PipeResources.cs" />
     <Compile Include="Characters\Viewer.cs" />
     <Compile Include="Controls\IControls.cs" />
     <Compile Include="Controls\KeyboardControls.cs" />
