--- a/Shared/Flappy.Logic/Flappy.Logic.csproj
+++ b/Shared/Flappy.Logic/Flappy.Logic.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprites\Camera.cs" />
     <Compile Include="Sprites\Sprite.cs" />
+    <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
