--- a/Shared/Flappy.Logic/Flappy.Logic.csproj
+++ b/Shared/Flappy.Logic/Flappy.Logic.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprites\Camera.cs" />
     <Compile Include="Sprites\Sprite.cs" />
+    <Compile Include="Sprites\Strip.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
